--- a/drinks.html
+++ b/drinks.html
@@ -16,7 +16,7 @@
         <div id="meals">
 
             <div class="meals-list">
-                <a href="#">
+                <a href="milkshake.html">
                     <div class="meals-list-item">
                         <h1>Strawberry Milkshake<i class="fas fa-chevron-circle-right"></i></h1>
                         <p>Creamy strawberry milkshake</p>
