--- a/desserts.html
+++ b/desserts.html
@@ -16,7 +16,7 @@
         <div id="meals">
 
             <div class="meals-list">
-                <a href="#">
+                <a href="cookies.html">
                     <div class="meals-list-item">
                         <h1>Cookies<i class="fas fa-chevron-circle-right"></i></h1>
                         <p>Pecan, raisin and cinnamon cookies</p>
